--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "@types/crypto-js": "^4.0.2",
+    "crypto-js": "^3.1.9-1",
     "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.2.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
